2008-06-03 18:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* SaverWindow.m: Remove kludge since omnipresence is implemented
	in the backend now.
	* Space2View.bproj, Polyhedra.bproj, SporView.bproj: New saver 
	modules.

2008-05-04 08:52-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Correct issues with makefile.

2007-05-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile: Do not set GNUSTEP_INSTALLATION_DIR.
	* Black.bproj/GNUmakefile: Same change.
	* Boxes.bproj/GNUmakefile: Same change.
	* NickSpace.bproj/GNUmakefile: Same change.
	
2005-07-28 21:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* config.h.in: Configuration file header.
	* configure.ac: Configuration script.

2005-07-28 21:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* InnerSpace.xcode: Added xcode directory.

2005-01-17 20:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* InnerSpace.gorm: Move "hide:" below "Run".
	* SaverWindow.m: Override "hide:" to prevent the saver window
	from being hidden.

2005-01-17 20:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* InnerSpaceController.h: Made some formerly private methods public.
	* InnerSpaceController.m: Make some formerly private methods public.
	Also removed the makeWindowOmnipresent forward declaration.  Added
	a call to the new method on SaverWindow which does this.
	* InnerSpace.gorm: Changed the layout of the GUI a little.
	* InnerSpaceInfo.plist: added information in the plist for a 
	nicer panel.
	* NickSpace.bproj/English.lproj/NickSpace.gorm: Changed mikes email to
	the new email.
	* SaverWindow.h: Added new method for makeOmnipresent.
	* SaverWindow.m: Added new method implementation for makeOmnipresent.
	Special thanks to Enrico Sersale who did it first in GWorkspace.
	* UtilFunctions.c: Removed the makeWindowOmnipresent function and 
	also removed some commented out code.

2005-01-08 07:18 Gregory John Casamento <greg_casamento@yahoo.com>